[package]
name = "field_count_derive"
version = "0.1.1"
authors = ["discosultan <jaanusvarus@gmail.com>"]
edition = "2018"
license-file = "../LICENSE"
description = "Derive the field count for a struct"
repository = "https://github.com/discosultan/field-count"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
